--- a/assets/stylesheets/src/_typography.scss
+++ b/assets/stylesheets/src/_typography.scss
@@ -1,6 +1,7 @@
 .text-title {
-  font-size: 20px;
   color: rgba(black, 0.87);
-  line-height: 28px;
+  font-size: 20px;
+  font-weight: bold;
   letter-spacing: 0.05em;
+  line-height: 28px;
 }
