--- a/assets/stylesheets/src/_action_bar.scss
+++ b/assets/stylesheets/src/_action_bar.scss
@@ -9,3 +9,23 @@
     color: white;
   }
 }
+
+.action-icon {
+  @extend .no-select;
+  display: inline-block;
+  padding: 12px;
+  font-size: 20px;
+  text-align: center;
+  cursor: pointer;
+  i {
+    color: $color-primary-700;
+    display: inline-block;
+    width: 24px;
+  }
+  &:active {
+    background-color: $color-primary-100;
+  }
+  &.action-icon-nav {
+    margin-right: 8px;
+  }
+}
