--- a/assets/stylesheets/src/viewer.scss
+++ b/assets/stylesheets/src/viewer.scss
@@ -1,4 +1,7 @@
-@import 'variables';
+@import 'mixin';
+@import 'extend';
+@import 'variable';
+
 @import 'z_depth';
 @import 'action_bar';
 @import 'typography';
