--- a/assets/stylesheets/src/_variable.scss
+++ b/assets/stylesheets/src/_variable.scss
@@ -3,3 +3,4 @@ $color-accent-400: #ffea00;
 $color-primary-100: #b2dfdb;
 $color-primary-500: #00bbd3;
 $color-primary-700: #00796b;
+$color-background: #e7e7e7;
