--- a/src/styles/_action_bar.scss
+++ b/src/styles/_action_bar.scss
@@ -14,16 +14,10 @@
 }
 
 .action-icon {
-  @extend .no-select;
+  @extend .btn-icon;
   display: inline-block;
-  padding: 12px;
-  font-size: 20px;
-  text-align: center;
-  cursor: pointer;
   i {
     color: $color-primary-700;
-    display: inline-block;
-    width: 24px;
   }
   &:active {
     background-color: $color-primary-100;
