--- a/src/styles/_extend.scss
+++ b/src/styles/_extend.scss
@@ -7,3 +7,15 @@
   -o-user-select: none;
   user-select: none;          
 }
+
+.btn-icon {
+  @extend .no-select;
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  padding: 12px;
+  font-size: 20px;
+  line-height: 24px;
+  text-align: center;
+  cursor: pointer;
+}
