fab for next episode

--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -4,3 +4,8 @@ $color-primary-100: #b2dfdb;
 $color-primary-500: #00bbd3;
 $color-primary-700: #00796b;
 $color-background: #e7e7e7;
+
+$color-light-gray:  rgba(black, 0.12);
+$color-gray:        rgba(black, 0.26);
+$color-dark-gray:   rgba(black, 0.54);
+$color-darken-gray: rgba(black, 0.87);
