--- a/src/styles/_action_bar.scss
+++ b/src/styles/_action_bar.scss
@@ -8,6 +8,7 @@
   background-color: $color-primary-500;
   z-index: 100;
   & > [class*='text'] {
+    display: inline-block;
     line-height: 48px;
     color: white;
   }
@@ -18,6 +19,7 @@
   display: inline-block;
   i {
     color: $color-primary-700;
+    line-height: 26px;
   }
   &:active {
     background-color: $color-primary-100;
