--- a/src/styles/_fab.scss
+++ b/src/styles/_fab.scss
@@ -9,6 +9,7 @@
   right: 24px;
   bottom: 24px;
   text-align: center;
+  transition: all 0.2s ease-in-out;
   i {
     font-size: 16px;
     line-height: 48px;
